make function for steps by citizens

--- a/ocean_vs/ocean_vs.vcxproj
+++ b/ocean_vs/ocean_vs.vcxproj
@@ -41,6 +41,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -49,10 +50,11 @@
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,14 +81,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="coordinates.cpp" />
-    <ClCompile Include="objects_counter.cpp" />
     <ClCompile Include="ocean.cpp" />
     <ClCompile Include="ocean_main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="citizens.h" />
     <ClInclude Include="ocean.h" />
-    <ClInclude Include="ocean_help_classes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
