delete old files: coordinates.cpp, objects_counter.cpp and add new: ocean_help_classes.cpp

--- a/ocean_vs/ocean_vs.vcxproj
+++ b/ocean_vs/ocean_vs.vcxproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <ClInclude Include="citizens.h" />
     <ClInclude Include="ocean.h" />
+    <ClInclude Include="ocean_help_classes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
