--- a/ocean_vs/ocean_vs.vcxproj.filters
+++ b/ocean_vs/ocean_vs.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="citizens.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ocean_help_classes.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
